# sp1-primitive-bench

./: .gitignore  Cargo.toml  DEMO.md  README.md
benches/results/: demo.csv  demo.md
benches/results/scaling/: demo.csv  demo.md
host/: Cargo.toml
host/src/: main.rs
program/: Cargo.toml
program/src/: hash.rs  main.rs  sig.rs
