[package]
name = "bench-program"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bench-program"
path = "src/main.rs"

[dependencies]
sp1-zkvm = "~6.2"

# Precompile-routed via [patch.crates-io] in the workspace root.
sha2 = { version = "0.10", default-features = false }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
ed25519-dalek = { version = "2.1", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
